Bump Yasson to 1.0.8